[workspace]
members = [
    "crates/serpentines-core",
    "crates/serpentines-platform",
    "crates/serpentines-win",
    "crates/serpentines-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Serpentines Project Contributors"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glam = { version = "0.27", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
thiserror = "1"
cfg-if = "1"
windows = { version = "0.58", features = [] }
