[package]
name = "serpentines-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
