[package]
name = "serpentines-win"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
serpentines-platform = { path = "../serpentines-platform" }
