[package]
name = "serpentines-win"
version = "0.1.0"
edition = "2021"
authors = ["cynnamolgus"]

[dependencies]
tracing = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
] }
serpentines-platform = { path = "../serpentines-platform" }
tray-icon = "0.21"
serpentines-ui = { path = "../serpentines-ui" }
once_cell = "1.19"
crossbeam-channel = "0.5"
image = "0.24"
